--- a/face_recognition.ipynb
+++ b/face_recognition.ipynb
@@ -38,7 +38,11 @@
         "\n",
         "3) Use pre-trained model InceptionResnetV1 to extract embeddings from faces in the faces directory\n",
         "\n",
-        "4) Use DBSCAN to cluster the embeddings and generate the organized_faces directory automatically with a folder for each person"
+        "4) Use DBSCAN to cluster the embeddings and generate the organized_faces directory automatically with a folder for each person\n",
+        "\n",
+        "5) Encoding known faces: generate a pickle file with known face embeddings\n",
+        "\n",
+        "6) Recognize faces: upload unseen images and compare detected faces with known embeddings."
       ],
       "metadata": {
         "id": "QsDi1sRJjgJW"
